--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
     "antd": "^3.10.3",
+    "antd-theme-generator": "1.1.7",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-named-asset-import": "^0.2.2",
     "babel-preset-react-app": "^5.0.4",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
+    "chalk": "^4.1.0",
     "css-loader": "1.0.0",
+    "customize-cra": "^1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "dynamic-antd-theme": "^0.6.6",
     "echarts": "^4.2.0-rc.2",
     "echarts-for-react": "^2.0.15-beta.0",
     "eslint": "5.6.0",
@@ -30,6 +34,7 @@
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
     "fs-extra": "7.0.0",
+    "gg-editor": "^3.0.0-beta.3",
     "html-webpack-plugin": "^4.0.0-beta.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
@@ -46,6 +51,7 @@
     "promise.prototype.finally": "^3.1.0",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
+    "react-app-rewired": "^2.1.6",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.6.0",
     "react-loadable": "^5.5.0",
@@ -82,7 +88,9 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "eslint": "^5.9.0",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0"
   },
   "jest": {
     "collectCoverageFrom": [
